--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezequiel Ramirez || Developer</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +25,7 @@
             <p class="subtitle">A Web Developer/Philosopher</p>
         </section>
         <section id="projects">
-            <h2 class="project-title">These are some of my projects</h2>
+            <h2 class="project-section-title">These are some of my projects</h2>
             <div id="projects-container">
                 <article class="project-tile">
                     <a class="project-container">
@@ -66,9 +69,9 @@
         <section id="contact">
             <p class="title">Let's Work together...</p>
             <p class="subtitle-contact">How do you take your cofee?</p>
-            <a href="#" class="fa fa-facebook"> Facebook</a>
-            <a id="profile-link" target="_blank" href="https://github.com/ChekeGT" class="fa fa-github"> GitHub</a>
-            <a href="#" class="fa fa-twitter"> Twitter</a>
+            <a href="#" class="fab fa-facebook"> Facebook</a>
+            <a id="profile-link" target="_blank" href="https://github.com/ChekeGT" class="fab fa-github"> GitHub</a>
+            <a href="#" class="fab fa-twitter"> Twitter</a>
             <a href="" class="fa fa-envelope"> Send a mail</a>
             <a href="" class="fa fa-mobile"> Call me</a>
         </section>
