Added the projects section main styles and fixed some minor issues with the html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="projects-container">
                 <article class="project-tile">
                     <a class="project-container">
-                        <img class="img-project"/>
+                        <img class="img-project" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"/>
                         <h3 class="project-title" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png">Tribute page</h3>
                     </a>
                 </article>
@@ -63,8 +63,8 @@
                         <h3 class="project-title">tic tac toe game</h3>
                     </a>
                 </article>
-                <button onclick="window.location.href='https://codepen.io/FreeCodeCamp/'">Show all</button>
             </div>
+            <a class="btn" href="https://github.com/ChekeGT?tab=repositories" target="_blank">Show all</a>
         </section>
         <section id="contact">
             <p class="title">Let's Work together...</p>
