Added the main styles for the contact page

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
         <section id="contact">
             <p class="title">Let's Work together...</p>
             <p class="subtitle-contact">How do you take your cofee?</p>
-            <a href="#" class="fab fa-facebook"> Facebook</a>
-            <a id="profile-link" target="_blank" href="https://github.com/ChekeGT" class="fab fa-github"> GitHub</a>
-            <a href="#" class="fab fa-twitter"> Twitter</a>
-            <a href="" class="fa fa-envelope"> Send a mail</a>
-            <a href="" class="fa fa-mobile"> Call me</a>
+            <div class="social-media-container">
+                <a href="#" class="fab fa-facebook"> Facebook</a>
+                <a id="profile-link" target="_blank" href="https://github.com/ChekeGT" class="fab fa-github"> GitHub</a>
+                <a href="#" class="fab fa-twitter"> Twitter</a>
+                <a href="" class="fa fa-envelope"> Send a mail</a>
+                <a href="" class="fa fa-mobile"> Call me</a>
+            </div>
         </section>
     </main>
     <footer>
