--- a/index.html
+++ b/index.html
@@ -28,43 +28,45 @@
             <h2 class="project-section-title">These are some of my projects</h2>
             <div id="projects-container">
                 <article class="project-tile">
-                    <a class="project-container">
+                    <a href="https://github.com/ChekeGT/living-the-simple-life" class="project-container">
                         <img class="img-project" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"/>
-                        <h3 class="project-title" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png">Tribute page</h3>
+                        <h3 class="project-title"><span class="code"><</span>Tribute page <span class="code">/></span></h3>
                     </a>
                 </article>
                 <article class="project-tile">
                     <a class="project-container">
                         <img class="img-project" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"/>
-                        <h3 class="project-title">Random Quote machine</h3>
+                        <h3 class="project-title"><span class="code"><</span>Random Quote machine <span class="code">/></span></h3>
                     </a>
                 </article>
                 <article class="project-tile">
                     <a class="project-container">   
                         <img class="img-project" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"/>
-                        <h3 class="project-title">Javascript calculator</h3>
+                        <h3 class="project-title"><span class="code"><</span>Javascript calculator <span class="code">/></span></h3>
                     </a>
                 </article>
                 <article class="project-tile">
                     <a class="project-container">
                         <img class="img-project" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"/>
-                        <h3 class="project-title">map data across the globe</h3>
+                        <h3 class="project-title"><span class="code"><</span>map data across the globe <span class="code">/></span></h3>
                     </a>
                 </article>
                 <article class="project-tile">
                     <a class="project-container">
                         <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" class="img-project"/>
-                        <h3 class="project-title">Wikipedia Viewer</h3>
+                        <h3 class="project-title"><span class="code"><</span>Wikipedia Viewer <span class="code">/></span></h3>
                     </a>
                 </article>
                 <article class="project-tile">
-                    <a class="project-container">
+                    <a href="#" class="project-container">
                         <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" class="img-project"/>
-                        <h3 class="project-title">tic tac toe game</h3>
+                        <h3 class="project-title"><span class="code"><</span>tic tac toe game <span class="code">/></span></h3>
                     </a>
                 </article>
             </div>
-            <a class="btn" href="https://github.com/ChekeGT?tab=repositories" target="_blank">Show all</a>
+            <a class="btn" href="https://github.com/ChekeGT?tab=repositories" target="_blank">
+                <p>Show all<i class="fas fa-chevron-right"></i></p>
+            </a>
         </section>
         <section id="contact">
             <p class="title">Let's Work together...</p>
